project/visa/test/assembler/error/invalid-arguments.asm
nop
nop #1
add #1
not $r
store R0, @label
jmp @label
